--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 html {
@@ -68,15 +69,23 @@ body {
     justify-content: space-evenly;
     align-content: center;
     flex-wrap: wrap;
+    overflow: hidden;
+    
+    
 }
 .container-j1 div {
     margin:1%;
-    width: 60px;
+    width: 52px;
     height: 80px;
     display: flex;
     background-color: beige;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
+}
+.container-j1 img {
+    max-width:100%;
+    height: 100%;
 }
 .block-bataille{
     width: 40%;
@@ -87,12 +96,17 @@ body {
 
 }
 .block-bataille div {
-    width: 90px;
+    width: 80px;
     height: 120px;
     display:flex;
     margin:3%;
     background-color: beige;
+    border-radius: 5px;
 
+}
+.block-bataille img{
+    max-width:100%;
+    height: 100%;
 }
 .block-j2{
     width: 30%;
@@ -120,12 +134,17 @@ body {
 }
 .container-j2 div {
     margin:1%;
-    width: 60px;
+    width: 52px;
     height: 80px;
     display: flex;
     background-color: beige;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
+}
+.container-j2 img {
+    max-width:100%;
+    height: 100%;
 }
 
 /*--------------------TROISIEME PARTIE-------------------------*/
