--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@ body {
 .milieu{
     min-width: 90%;
     height: 70vh;
-    background-color: rgb(18, 112, 194);
+    background-color: green;
     display: flex;
     
 }
 .block-j1{
     width: 30%;
     height: 100%;
-    background-color: green;
+    background-color: darkgreen;
     display:flex;
     flex-direction: column;
 }
@@ -93,6 +93,7 @@ body {
     display:flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
 }
 .block-bataille div {
@@ -101,17 +102,25 @@ body {
     display:flex;
     margin:3%;
     background-color: beige;
-    border-radius: 5px;
+    border-radius: 10px;
+    overflow: hidden;
 
 }
 .block-bataille img{
     max-width:100%;
     height: 100%;
 }
+#combat {
+    width:8pc;
+    height: 3pc;
+    position: relative;
+    bottom:10px;
+
+}
 .block-j2{
     width: 30%;
     height: 100%;
-    background-color: green;
+    background-color: darkgreen;
     display:flex;
     flex-direction: column;
 }
@@ -164,4 +173,16 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: Chakra;
+}
+.score1 div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.score2 div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
