--- a/style.css
+++ b/style.css
@@ -42,10 +42,15 @@ body {
 .milieu{
     min-width: 90%;
     height: 70vh;
-    background-color: green;
+    /* background-color: green; */
+    background: url(images/silhouette-sexy.jpg);
+    background-size: cover;
     display: flex;
+    border: 1px solid black;
+
     
 }
+
 .block-j1{
     width: 30%;
     height: 100%;
@@ -78,10 +83,13 @@ body {
     width: 52px;
     height: 80px;
     display: flex;
-    background-color: beige;
+    background-color: brown;
+    
+    
+    
     align-items: center;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 .container-j1 img {
     max-width:100%;
@@ -91,26 +99,37 @@ body {
     width: 40%;
     height: 100%;
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    position: relative;
-
+    position: relative; /*<--needed to keep the absolute box inside*/
+    
 }
 .block-bataille div {
     width: 80px;
     height: 120px;
     display:flex;
-    margin:3%;
+    margin:5%;
     background-color: beige;
     border-radius: 10px;
     overflow: hidden;
+    
 
+}
+#combat{
+    
+    
+    position : absolute;
+    padding: 10px;
+    bottom: 10px;
+    /* margin:auto;
+    left:37%; */
+    
 }
 .block-bataille img{
     max-width:100%;
     height: 100%;
 }
-#combat,#distrib1,#melange1,#reset1 {
+#distrib1,#melange1,#reset1 {
     width:6pc;
     height: 3pc;
     position: relative;
@@ -147,10 +166,10 @@ body {
     width: 52px;
     height: 80px;
     display: flex;
-    background-color: beige;
+    background-color: brown;
     align-items: center;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 .container-j2 img {
     max-width:100%;
